<resources>
    <string name="app_name" translatable="false">ModPE IDE</string>
    <string name="label_permissions">Permissions</string>
    <string name="label_directory">Directory</string>
    <string name="label_local_storage">Local Storage</string>
    <string name="label_settings">Settings</string>
    <string name="label_application">Application</string>
    <string name="label_editor">Editor</string>
    <string name="label_code_style">Code Style</string>
    <string name="label_files">Files</string>
    <string name="label_about">About</string>
    <string name="label_fonts">Fonts</string>
    <string name="label_external_font">External Font</string>
    <string name="label_themes">Themes</string>
    <string name="label_new_theme">New Theme</string>
    <string name="label_keyboard_presets">Keyboard presets</string>
    <string name="label_new_preset">New Preset</string>
    <string name="label_changelog">ChangeLog</string>
    <string name="label_latest_release">Latest release</string>
    <string name="hint_search">Search…</string>
    <string name="hint_line">Line:</string>
    <string name="hint_line_number" translatable="false">0</string>
    <string name="hint_enter_file_name">Enter file name</string>
    <string name="hint_enter_file_path">Enter file path</string>
    <string name="hint_enter_archive_name">Enter archive name</string>
    <string name="hint_file_path" translatable="false">/storage/emulated/0/Download/...</string>
    <string name="hint_file_name" translatable="false">file.txt</string>
    <string name="hint_archive_name" translatable="false">archive.zip</string>
    <string name="hint_enter_font_name">Enter font name</string>
    <string name="hint_enter_font_path">Enter font path</string>
    <string name="hint_enter_theme_name">Enter theme name</string>
    <string name="hint_enter_theme_author">Enter theme author</string>
    <string name="hint_enter_theme_desc">Short description</string>
    <string name="hint_enter_preset_name">Enter preset name</string>
    <string name="hint_font_name" translatable="false">Droid Sans Mono</string>
    <string name="hint_theme_name" translatable="false">Darcula</string>
    <string name="hint_theme_author" translatable="false">Light Team Software</string>
    <string name="hint_theme_desc">Default color scheme</string>
    <string name="hint_preset_name">Custom</string>
    <string name="hint_preset_chars_no_separation">Characters (no separation)</string>
    <string name="hint_preset_characters" translatable="false">{}();,.=\|&amp;![]&lt;&gt;+-/*?:_</string>
    <string name="action_restart">Restart</string>
    <string name="action_grant_access">Grant Access</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_close">Close</string>
    <string name="action_close_others">Close Others</string>
    <string name="action_close_all">Close All</string>
    <string name="action_copy_path">Copy Path</string>
    <string name="action_folder">Folder</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert">Insert</string>
    <string name="action_run_in_background">Run in background</string>
    <string name="action_show_hidden_files">Show hidden files</string>
    <string name="action_create_zip">Create .zip</string>
    <string name="action_get_it">Get it</string>
    <string name="action_maybe_later">Maybe later</string>
    <string name="action_unlock_all_features">Unlock all features</string>
    <string name="action_select">Select</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_open_as">Open As</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_properties">Properties</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_line">Select Line</string>
    <string name="action_delete_line">Delete Line</string>
    <string name="action_duplicate_line">Duplicate Line</string>
    <string name="action_regex">Regex</string>
    <string name="action_match_case">Match Case</string>
    <string name="action_words_only">Words Only</string>
    <string name="action_find">Find</string>
    <string name="action_close_find">Close Find</string>
    <string name="action_replace">Replace</string>
    <string name="action_close_replace">Close Replace</string>
    <string name="action_replace_all">Replace All</string>
    <string name="action_goto_line">Go to Line</string>
    <string name="action_go_to">Go to</string>
    <string name="action_error_checking">Error Checking</string>
    <string name="action_insert_color">Insert Color</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_tools">Tools</string>
    <string name="dialog_title_choose_action">Choose action</string>
    <string name="dialog_title_create">Create…</string>
    <string name="dialog_title_rename">Rename…</string>
    <string name="dialog_title_multi_delete">Multi-delete</string>
    <string name="dialog_title_store">Get the Ultimate Edition</string>
    <string name="dialog_title_privacy_policy">Privacy Policy</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_title_properties">Properties</string>
    <string name="dialog_title_color_picker">Color Picker</string>
    <string name="dialog_title_result">Result</string>
    <string name="dialog_title_save_as">Save As…</string>
    <string name="dialog_title_goto_line">Go to Line…</string>
    <string name="dialog_title_deleting">Deleting…</string>
    <string name="dialog_title_copying">Copying…</string>
    <string name="dialog_title_compressing">Compressing…</string>
    <string name="dialog_title_extracting">Extracting…</string>
    <string name="dialog_title_archive_name">Archive name</string>
    <string name="dialog_message_exit">Are you sure you want to exit? All changes will be saved into a cache</string>
    <string name="dialog_message_delete">Are you sure you want to delete this file?</string>
    <string name="dialog_message_multi_delete">Are you sure you want to delete selected files?</string>
    <string name="properties_name">&lt;b>Name:&lt;/b> %s&lt;br></string>
    <string name="properties_path">&lt;b>Path:&lt;/b> %s&lt;br></string>
    <string name="properties_modified">&lt;b>Modified:&lt;/b> %s&lt;br></string>
    <string name="properties_size">&lt;b>Size:&lt;/b> %s&lt;br></string>
    <string name="properties_line_count">&lt;b>Line Count:&lt;/b> %s&lt;br></string>
    <string name="properties_word_count">&lt;b>Word Count:&lt;/b> %s&lt;br></string>
    <string name="properties_char_count">&lt;b>Character Count:&lt;/b> %s</string>
    <string name="properties_readable">R</string>
    <string name="properties_writable">W</string>
    <string name="properties_executable">X</string>
    <string name="properties_date_format">dd/MM/yyyy EEE HH:mm</string>
    <string name="explorer_date_format">dd MMM yy E HH:mm:ss</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="message_access_denied">Access Denied</string>
    <string name="message_access_required">Application requires access to files to work correctly</string>
    <string name="message_no_result">No result</string>
    <string name="message_no_open_files">No open files</string>
    <string name="message_tab_limit_achieved">Tab limit achieved</string>
    <string name="message_cannot_be_opened">File cannot be opened</string>
    <string name="message_invalid_file_name">Invalid file name</string>
    <string name="message_invalid_file_path">Invalid file path</string>
    <string name="message_unknown_exception">An error occurred</string>
    <string name="message_directory_expected">Unable to get list of files from file</string>
    <string name="message_file_already_exists">File already exists</string>
    <string name="message_file_not_found">File not found</string>
    <string name="pref_header_application_title">Application</string>
    <string name="pref_header_application_summary">Configure global application settings.</string>
    <string name="pref_header_editor_title">Editor</string>
    <string name="pref_header_editor_summary">Configure the editor.</string>
    <string name="pref_header_codeStyle_title">Code Style</string>
    <string name="pref_header_codeStyle_summary">Configure the code style.</string>
    <string name="pref_header_files_title">Files</string>
    <string name="pref_header_files_summary">Configure how files are handled.</string>
    <string name="pref_header_about_title">About</string>
    <string name="pref_header_about_summary">View information about ModPE IDE.</string>
    <string name="pref_category_look_and_feel">Look And Feel</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_category_encoding">Encoding</string>
    <string name="pref_category_linebreaks">Linebreaks</string>
    <string name="pref_category_file_explorer">File Explorer</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_contribute">Contribute</string>
    <string name="pref_color_scheme_title">Color Scheme</string>
    <string name="pref_color_scheme_summary">Configure the syntax highlighting color scheme.</string>
    <string name="pref_fullscreen_title">Full screen</string>
    <string name="pref_fullscreen_summary">Launch the application in full screen mode.</string>
    <string name="pref_confirm_exit_title">Confirm exit from the app</string>
    <string name="pref_confirm_exit_summary">If you press back, ModPE IDE ask for confirmation to exit.</string>
    <string name="pref_encoding_for_opening_title">Encoding for opening files</string>
    <string name="pref_encoding_for_opening_summary">Encoding to use when opening files.</string>
    <string name="pref_encoding_for_saving_title">Encoding for saving files</string>
    <string name="pref_encoding_for_saving_summary">Encoding to use when saving files.</string>
    <string name="pref_linebreaks_for_saving_files_title">Linebreaks for saving files</string>
    <string name="pref_linebreaks_for_saving_files_summary">Linebreak type to use when saving files.</string>
    <string name="pref_show_hidden_files_title">Show hidden files</string>
    <string name="pref_show_hidden_files_summary">Hidden files and folders (starting with a dot) will be displayed.</string>
    <string name="pref_folders_on_top_title">Folders on top</string>
    <string name="pref_folders_on_top_summary">Folders will be displayed on top.</string>
    <string name="pref_view_mode_title">View Mode</string>
    <string name="pref_sort_mode_title">Sort Mode</string>
    <string name="pref_about_standard_title" translatable="false">ModPE IDE - Standard Edition</string>
    <string name="pref_about_summary">Copyright 2020 Light Team Software\nAll right reserved\n\nVersion: %1$s (%2$d)</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="pref_contribute_title">Contribute to development</string>
    <string name="pref_contribute_summary">You can create an issue on GitHub or translate this app to your native language.\n\nThank you!</string>
</resources>