<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_encoding">

        <ListPreference
            android:title="@string/pref_encoding_for_opening_title"
            android:summary="@string/pref_encoding_for_opening_summary"
            android:key="ENCODING_FOR_OPENING"
            android:defaultValue="UTF-8"
            app:entries="@array/encoding_entries"
            app:entryValues="@array/encoding_values"/>

        <ListPreference
            android:title="@string/pref_encoding_for_saving_title"
            android:summary="@string/pref_encoding_for_saving_summary"
            android:key="ENCODING_FOR_SAVING"
            android:defaultValue="UTF-8"
            app:entries="@array/encoding_entries"
            app:entryValues="@array/encoding_values"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_linebreaks">

        <ListPreference
            android:title="@string/pref_linebreaks_for_saving_files_title"
            android:summary="@string/pref_linebreaks_for_saving_files_summary"
            android:key="LINEBREAK_FOR_SAVING"
            android:defaultValue="2"
            app:entries="@array/linebreak_entries"
            app:entryValues="@array/linebreak_values"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_file_explorer">

        <SwitchPreference
            android:title="@string/pref_show_hidden_files_title"
            android:summary="@string/pref_show_hidden_files_summary"
            android:defaultValue="true"
            android:key="SHOW_HIDDEN_FILES"/>

        <SwitchPreference
            android:title="@string/pref_folders_on_top_title"
            android:summary="@string/pref_folders_on_top_summary"
            android:defaultValue="true"
            android:key="FOLDERS_ON_TOP"/>

        <ListPreference
            android:title="@string/pref_view_mode_title"
            android:defaultValue="0"
            android:key="VIEW_MODE"
            app:entries="@array/view_mode_entries"
            app:entryValues="@array/view_mode_values"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:title="@string/pref_sort_mode_title"
            android:defaultValue="0"
            android:key="SORT_MODE"
            app:entries="@array/sort_mode_entries"
            app:entryValues="@array/sort_mode_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>