<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_look_and_feel">

        <Preference
            android:title="@string/pref_color_scheme_title"
            android:summary="@string/pref_color_scheme_summary"
            android:key="THEME_1"/>

        <SwitchPreference
            android:title="@string/pref_fullscreen_title"
            android:summary="@string/pref_fullscreen_summary"
            android:defaultValue="false"
            android:key="FULLSCREEN_MODE"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_other">

        <SwitchPreference
            android:title="@string/pref_confirm_exit_title"
            android:summary="@string/pref_confirm_exit_summary"
            android:defaultValue="true"
            android:key="CONFIRM_EXIT"/>

    </PreferenceCategory>

</PreferenceScreen>