<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_header_about_title"
    android:key="KEY_HEADER_ABOUT">

    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:icon="@mipmap/ic_launch_screen"
            android:title="@string/pref_about_standard_title"
            android:summary="@string/pref_about_summary"
            android:key="ABOUT_AND_CHANGELOG"/>

        <Preference
            android:title="@string/pref_privacy_policy_title"
            android:key="PRIVACY_POLICY"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_contribute">

        <Preference
            android:title="@string/pref_contribute_title"
            android:summary="@string/pref_contribute_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/massivemadness/ModPE-IDE"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>