<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/headersFragment">

    <fragment
        android:id="@+id/headersFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.HeadersFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_headers">
        <action
            android:id="@+id/to_applicationFragment"
            app:destination="@id/applicationFragment"/>
        <action
            android:id="@+id/to_editorFragment"
            app:destination="@id/editorFragment"/>
        <action
            android:id="@+id/to_codeStyleFragment"
            app:destination="@id/codeStyleFragment"/>
        <action
            android:id="@+id/to_filesFragment"
            app:destination="@id/filesFragment"/>
        <action
            android:id="@+id/to_aboutFragment"
            app:destination="@id/aboutFragment"/>
    </fragment>

    <fragment
        android:id="@+id/applicationFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.ApplicationFragment"
        android:label="@string/label_application">
        <action
            android:id="@+id/to_themesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/themesFragment"/>
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.EditorFragment"
        android:label="@string/label_editor">
        <action
            android:id="@+id/to_fontsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/fontsFragment"/>
        <action
            android:id="@+id/to_presetDialog"
            app:destination="@id/presetDialog"/>
    </fragment>

    <fragment
        android:id="@+id/codeStyleFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.CodeStyleFragment"
        android:label="@string/label_code_style"/>

    <fragment
        android:id="@+id/filesFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.FilesFragment"
        android:label="@string/label_files"/>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.AboutFragment"
        android:label="@string/label_about">
        <action
            android:id="@+id/to_changeLogFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/changeLogFragment"/>
    </fragment>

    <fragment
        android:id="@+id/fontsFragment"
        android:name="com.lightteam.modpeide.ui.fonts.fragments.FontsFragment"
        android:label="@string/label_fonts"
        tools:layout="@layout/fragment_fonts">
        <action
            android:id="@+id/to_externalFontFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/externalFontFragment"/>
    </fragment>

    <fragment
        android:id="@+id/externalFontFragment"
        android:name="com.lightteam.modpeide.ui.fonts.fragments.ExternalFontFragment"
        android:label="@string/label_external_font"
        tools:layout="@layout/fragment_external_font"/>

    <fragment
        android:id="@+id/themesFragment"
        android:name="com.lightteam.modpeide.ui.themes.fragments.ThemesFragment"
        android:label="@string/label_themes"
        tools:layout="@layout/fragment_themes">
        <action
            android:id="@+id/to_newThemeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:destination="@id/newThemeFragment"/>
    </fragment>

    <fragment
        android:id="@+id/newThemeFragment"
        android:name="com.lightteam.modpeide.ui.themes.fragments.NewThemeFragment"
        android:label="@string/label_new_theme"
        tools:layout="@layout/fragment_new_theme">
        <argument
            android:name="uuid"
            app:nullable="true"
            app:argType="string"/>
    </fragment>

    <dialog
        android:id="@+id/presetDialog"
        android:name="com.lightteam.modpeide.ui.settings.dialogs.PresetDialog"
        android:label="@string/label_keyboard_preset"
        tools:layout="@layout/dialog_preset"/>

    <fragment
        android:id="@+id/changeLogFragment"
        android:name="com.lightteam.modpeide.ui.settings.fragments.ChangeLogFragment"
        android:label="@string/label_changelog"
        tools:layout="@layout/fragment_changelog"/>

    <dialog
        android:id="@+id/storeDialog"
        android:name="com.lightteam.modpeide.ui.base.dialogs.StoreDialog"
        android:label="@string/dialog_title_store"
        tools:layout="@layout/dialog_store"/>

</navigation>